--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,10 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
-      "*": ["node_modules/*"]
+      "src/*": ["./src/*"]
     }
   },
   "include": ["src/**/*"]
