--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@electron-forge/plugin-webpack": "^7.2.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-window": "^1.8.8",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -39,23 +41,37 @@
     "electron": "27.1.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.25.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "prettier": "^3.1.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.0.0",
+    "ts-essentials": "^9.4.1",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "classnames": "^2.3.2",
+    "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
+    "inversify": "^6.0.1",
+    "p-queue": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
+    "react-window": "^1.8.10",
+    "reflect-metadata": "^0.1.13",
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
