--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "inversify": "^6.0.1",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "p-queue": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
