--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,6 +69,9 @@
   "settings": {
     "import/resolver": {
       "typescript": {}
+    },
+    "react": {
+      "version": "detect"
     }
   }
 }
