--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/plugin-webpack": "^7.2.0",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-window": "^1.8.8",
@@ -66,10 +67,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-virtual": "^3.0.1",
     "classnames": "^2.3.2",
     "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "inversify": "^6.0.1",
+    "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "p-queue": "^8.0.1",
