--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "es2020": true
   },
   "extends": [
     "eslint:recommended",
@@ -14,10 +15,19 @@
     "plugin:react-hooks/recommended",
     "plugin:import/typescript",
     "plugin:react/jsx-runtime",
-    "prettier"
+    "prettier",
+    "plugin:mobx/recommended",
+    "plugin:jest/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
+  "plugins": [
+    "react",
+    "react-hooks",
+    "@typescript-eslint",
+    "prettier",
+    "mobx",
+    "jest"
+  ],
   "rules": {
     // Eslint
     "no-undef": "error",
