--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .ts,.tsx .",
     "fix:lint": "prettier --write .",
     "build": "yarn run package && yarn run make",
+    "test": "jest --passWithNoTests",
     "build:web": "cross-env NODE_ENV=production webpack --config webpack.web.config.ts"
   },
   "keywords": [],
@@ -30,10 +31,10 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/plugin-webpack": "^7.2.0",
-    "@types/lodash": "^4.14.202",
+    "@types/emscripten": "^1.39.10",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/react-window": "^1.8.8",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -46,19 +47,25 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.25.0",
+    "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-mobx": "^0.0.9",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-loader": "^2.0.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-essentials": "^9.4.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "^5.3.2",
@@ -66,21 +73,20 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-virtual": "^3.0.1",
     "classnames": "^2.3.2",
     "electron-log": "^5.0.1",
     "electron-squirrel-startup": "^1.0.0",
+    "eventemitter3": "^5.0.1",
     "inversify": "^6.0.1",
-    "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
-    "p-queue": "^8.0.1",
+    "nayuki-qr-code-generator": "^1.8.0",
+    "p-timeout": "^6.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-window": "^1.8.10",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
