Add new assets and update styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,21 @@
     "xstring": "cpp",
     "xtr1common": "cpp",
     "xutility": "cpp",
-    "windows.h": "c"
+    "windows.h": "c",
+    "array": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "sstream": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "tuple": "cpp",
+    "unordered_map": "cpp",
+    "variant": "cpp",
+    "vector": "cpp",
+    "xhash": "cpp",
+    "xtree": "cpp"
   },
   "cSpell.words": ["qrcodegen", "viewmodel"]
 }
