--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@electron-forge/plugin-webpack": "^7.2.0",
     "@types/emscripten": "^1.39.10",
     "@types/jest": "^29.5.11",
+    "@types/pngjs": "^6.0.4",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.7",
@@ -53,6 +55,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^29.7.0",
@@ -73,6 +76,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@tanstack/react-virtual": "^3.0.1",
     "classnames": "^2.3.2",
     "electron-log": "^5.0.1",
@@ -83,6 +87,8 @@
     "mobx-react-lite": "^4.0.5",
     "nayuki-qr-code-generator": "^1.8.0",
     "p-timeout": "^6.1.2",
+    "pngjs": "^7.0.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
